Monetization button animation

--- a/src/app/modules/channels/v2/actions/boost.component.html
+++ b/src/app/modules/channels/v2/actions/boost.component.html
@@ -1,3 +1,7 @@
-<a class="m-button-v2 m-button-v2--iconOnly" (click)="onClick($event)">
+<a
+  class="m-button-v2 m-button-v2--iconOnly m-button-v2--transparent"
+  title="Boost"
+  (click)="onClick($event)"
+>
   <m-icon from="md" iconId="trending_up" [sizeFactor]="5"></m-icon>
 </a>
