--- a/src/app/modules/composer/components/modal/modal.component.html
+++ b/src/app/modules/composer/components/modal/modal.component.html
@@ -1,1 +1,5 @@
-<m-composer__base (onPost)="onPost($event)" #baseComponent></m-composer__base>
+<m-composer__base
+  (onPost)="onPost($event)"
+  #baseComponent
+  isModal="true"
+></m-composer__base>
