--- a/src/app/modules/channels/v2/shop/brief-wire-rewards.component.html
+++ b/src/app/modules/channels/v2/shop/brief-wire-rewards.component.html
@@ -5,10 +5,11 @@
     [hidden]="wireRewards.length === 0"
   >
     <div class="m-channelShopBrief__title">
-      <span
+      <a
         class="m-channelShopBriefTitle__text"
         i18n="CHANNEL_V2__BRIEF_WIRE_REWARD__SHOP"
-        >Shop</span
+        [routerLink]="['/', service.username$ | async, 'shop']"
+        >Shop</a
       >
     </div>
 
