Reshuffle and fixing table alignment issue that crept in

--- a/src/app/modules/blogs/blog.scss
+++ b/src/app/modules/blogs/blog.scss
@@ -308,6 +308,7 @@ minds-blog-edit {
     table {
       align-items: center;
       border-spacing: 0;
+      margin: auto;
 
       tbody {
         max-width: 100%;
