Updated footer to link to blogs page

--- a/src/app/modules/marketing/footer.component.html
+++ b/src/app/modules/marketing/footer.component.html
@@ -51,7 +51,7 @@
         </li>
 
         <li>
-          <a routerLink="/blog/minds" i18n="@@COMMON_FOOTER__BLOG">
+          <a routerLink="/minds/blogs" i18n="@@COMMON_FOOTER__BLOG">
             Blog
           </a>
         </li>
