make login/register buttons have ellipsis animation when in progress

--- a/src/app/modules/auth/login.component.scss
+++ b/src/app/modules/auth/login.component.scss
@@ -151,6 +151,7 @@ m-login {
 
       form {
         background: transparent !important;
+        overflow: visible;
 
         .mdl-card__supporting-text {
           overflow: visible;
@@ -187,6 +188,24 @@ m-login {
             button.mf-button {
               width: 132px;
               height: 60px;
+            }
+          }
+        }
+
+        m-shadowboxSubmitButton {
+          min-width: 0 !important;
+          button {
+            width: 132px;
+            height: 60px;
+            border-radius: 2px;
+            > div {
+              font-size: 18px;
+              @include m-theme() {
+                color: themed($m-white) !important;
+              }
+              @media screen and (max-width: $max-mobile) {
+                font-size: 15px;
+              }
             }
           }
         }
