--- a/src/app/modules/auth/register.component.scss
+++ b/src/app/modules/auth/register.component.scss
@@ -27,6 +27,31 @@ m-register {
       }
     }
 
+    m-shadowboxSubmitButton {
+      min-width: 0 !important;
+      align-self: flex-end;
+      @media screen and (max-width: $max-mobile) {
+        align-self: stretch;
+      }
+      button {
+        width: 195px;
+        height: 55px;
+        border-radius: 2px;
+
+        @media screen and (max-width: $max-mobile) {
+          width: 100%;
+        }
+        > div {
+          font-size: 18px;
+          @include m-theme() {
+            color: themed($m-white) !important;
+          }
+          @media screen and (max-width: $max-mobile) {
+            font-size: 15px;
+          }
+        }
+      }
+    }
     &::before {
       content: '';
       position: absolute;
