Tall images should not be distorted to fit the container #3233

--- a/src/app/modules/newsfeed/activity/content/content.component.scss
+++ b/src/app/modules/newsfeed/activity/content/content.component.scss
@@ -157,6 +157,7 @@ m-activity__content {
     display: block;
     height: auto;
     max-height: 400px;
+    object-fit: cover;
   }
   .meta {
     padding: 20px $activity-padding-lr;
