--- a/src/app/modules/blogs/blog.scss
+++ b/src/app/modules/blogs/blog.scss
@@ -235,8 +235,9 @@ minds-blog-edit {
     font-family: Roboto, Helvetica, Arial, sans-serif;
     font-weight: 400;
     line-height: 30px;
+
     @include m-theme() {
-      color: themed($m-grey-600);
+      color: rgba(themed($m-black), 0.84);
     }
   }
 
@@ -265,15 +266,6 @@ minds-blog-edit {
     font-weight: 600;
   }
 
-  ul,
-  ol {
-    margin: 0 0 0.5em 1em;
-
-    li {
-      margin-bottom: 0.5em;
-    }
-  }
-
   figcaption {
     word-break: break-word;
     padding: 0.6em;
@@ -293,10 +285,10 @@ minds-blog-edit {
   ul,
   ol {
     margin: 18px 0;
+
     li {
-      @include m-theme() {
-        color: themed($m-black);
-      }
+      margin-bottom: 0.5em;
+      font-size: 21px;
     }
   }
 
@@ -309,6 +301,7 @@ minds-blog-edit {
       align-items: center;
       border-spacing: 0;
       margin: auto;
+      text-rendering: optimizelegibility;
 
       tbody {
         max-width: 100%;
@@ -319,6 +312,7 @@ minds-blog-edit {
         min-width: 100px; /* Stop shrinking and trigger scrollbar */
         padding: 8px 16px;
         text-align: left;
+
         @include m-theme() {
           border: 1px solid themed($m-borderColor--primary);
         }
@@ -326,6 +320,7 @@ minds-blog-edit {
 
       th {
         font-weight: 900;
+
         @include m-theme() {
           color: themed($m-black);
         }
