--- a/src/app/common/components/form-toast/form-toast.component.html
+++ b/src/app/common/components/form-toast/form-toast.component.html
@@ -5,6 +5,7 @@
       [@fader]="toast.dismissed ? 'dismissed' : 'active'"
       (mouseover)="pauseTimeout(i)"
       (mouseleave)="resumeTimeout(i)"
+      data-cy="data-minds-form-toast-wrapper"
     >
       <div [ngClass]="['m-formToast__iconWrapper--' + toast.type]">
         <i class="material-icons">
