--- a/src/app/modules/blogs/v2/edit/editor-base.component.html
+++ b/src/app/modules/blogs/v2/edit/editor-base.component.html
@@ -38,6 +38,7 @@
             type="file"
             accept="image/*"
             (change)="uploadBanner(bannerUpload)"
+            data-cy="data-minds-blog-banner-upload"
             #bannerUpload
           />
         </span>
@@ -65,6 +66,7 @@
         [ngModel]="service.title$ | async"
         (ngModelChange)="onTitleChange($event)"
         maxlength="128"
+        data-cy="data-minds-blog-title-input"
       />
     </div>
     <div class="m-blogEditor__bodyContainer">
