handle paywalled gifs same as images

--- a/src/app/modules/newsfeed/activity/content/content.component.html
+++ b/src/app/modules/newsfeed/activity/content/content.component.html
@@ -75,11 +75,7 @@
 <!-- ----------------------------------- -->
 <!-- IMAGE -->
 <!-- ----------------------------------- -->
-<div
-  class="m-activityContent__media--image"
-  *ngIf="isImage"
-  [ngClass]="{ isPaywalledGif: isPaywalledGif }"
->
+<div class="m-activityContent__media--image" *ngIf="isImage">
   <a
     class="m-activityContentMedia__link"
     [routerLink]="['/media', imageGuid]"
