don't show sidebar nav on pro domains

--- a/src/app/modules/layout/page/page.component.html
+++ b/src/app/modules/layout/page/page.component.html
@@ -24,7 +24,10 @@
       pageLayoutService.isFullWidth$ | async
     "
   >
-    <m-sidebar--navigation m-pageLayout__pane="left"></m-sidebar--navigation>
+    <m-sidebar--navigation
+      m-pageLayout__pane="left"
+      *ngIf="!isProDomain"
+    ></m-sidebar--navigation>
     <div
       [m-pageLayout__pane]="
         (pageLayoutService.isFullWidth$ | async) ? null : 'main'
