use exchange rate from configs instead of hardcoding

--- a/src/app/modules/channels/v2/shop/memberships/edit.component.html
+++ b/src/app/modules/channels/v2/shop/memberships/edit.component.html
@@ -108,7 +108,9 @@
                 i18n="@@CHANNELS_SHOP_MEMBERSHIPS_EDIT_HAS_TOKENS_TOOLTIP"
               >
                 Allow users to purchase your membership with Minds Tokens. Token
-                amounts are converted at a rate of $1.25/token.
+                amounts are converted at a rate of ${{
+                  tokenExchangeRate
+                }}/token.
               </ng-container>
             </m-tooltip>
           </div>
