--- a/src/app/modules/composer/components/popup/monetize/v2/components/custom/custom.component.html
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/custom/custom.component.html
@@ -59,7 +59,9 @@
                 i18n="@@COMPOSER__MONETIZE_CUSTOM__ALLOW_TOKENS_TOOLTIP"
               >
                 Allow users to purchase your membership with Minds Tokens. Token
-                amounts are converted at a rate of $1.25/token.
+                amounts are converted at a rate of ${{
+                  tokenExchangeRate
+                }}/token.
               </ng-container>
             </m-tooltip>
           </div>
