--- a/src/app/modules/wallet/v2/tokens/transactions/transactions-tokens.component.html
+++ b/src/app/modules/wallet/v2/tokens/transactions/transactions-tokens.component.html
@@ -37,6 +37,7 @@
           ></m-walletRewardsPopup>
         </td>
       </tr>
+      <tr class="m-walletTransactionsTable__row--spacer"></tr>
     </ng-template>
     <ng-container *ngIf="transactions.length !== 0">
       <m-walletTransactionsTable
