--- a/src/app/common/components/sort-selector/sort-selector.component.scss
+++ b/src/app/common/components/sort-selector/sort-selector.component.scss
@@ -67,6 +67,10 @@ m-sort-selector {
     }
   }
 
+  .m-sort-selector--period-dropdown {
+    cursor: pointer;
+  }
+
   .m-sort-selector--custom-type-dropdown {
     .m-dropdown {
       margin-right: 8px;
