--- a/src/app/modules/wallet/v2/cash/cash.component.html
+++ b/src/app/modules/wallet/v2/cash/cash.component.html
@@ -11,7 +11,7 @@
       routerLinkActive="selected"
       i18n="@@WALLET__V2__TABS__PRO__EARNIGNS"
     >
-      Pro Earnings
+      Earnings
     </a>
   </li>
   <li class="m-tabs__tab">
