Added in counter for max comment edit length #3437

--- a/src/app/modules/comments/comment/comment.component.scss
+++ b/src/app/modules/comments/comment/comment.component.scss
@@ -278,3 +278,11 @@
     color: themed($m-red);
   }
 }
+
+.minds-editable-container {
+  .m-commentPoster__limit {
+    position: absolute;
+    right: 25px;
+    top: 75px;
+  }
+}
