--- a/src/app/modules/pro/channel/search-box/search-box.component.scss
+++ b/src/app/modules/pro/channel/search-box/search-box.component.scss
@@ -41,6 +41,7 @@ div.mdl-textfield.mdl-js-textfield.m-pro__searchBox {
 
     color: var(--m-pro--text-color);
     background-color: var(--m-pro--transparent-background-color);
+    outline: none;
   }
 
   label {
