--- a/src/app/modules/auth/login.component.scss
+++ b/src/app/modules/auth/login.component.scss
@@ -173,7 +173,7 @@ m-login {
           &:active,
           &:focus {
             @include m-theme() {
-              outline: 1px solid themed($m-blue);
+              border: 1px solid themed($m-blue);
             }
           }
         }
