--- a/src/app/modules/modals/v2/modal-v2.component.scss
+++ b/src/app/modules/modals/v2/modal-v2.component.scss
@@ -30,6 +30,11 @@
     min-height: 100%;
     background: none !important;
 
+    @media screen and (max-width: $max-mobile) {
+      position: absolute;
+      top: 0;
+    }
+
     .m-overlay-modal--close {
       @include m-theme() {
         background-color: transparent;
