--- a/src/app/modules/wire/v2/creator/wire-creator.component.scss
+++ b/src/app/modules/wire/v2/creator/wire-creator.component.scss
@@ -1,5 +1,5 @@
 m-wireCreator {
-  @media screen and (max-width: $max-mobile) {
+  @media screen and (max-width: $min-tablet) {
     display: flex;
     flex-direction: column;
     flex: 1;
@@ -11,7 +11,7 @@ m-wireCreator {
   width: 778px;
   max-width: 100%;
 
-  @media screen and (max-width: $max-mobile) {
+  @media screen and (max-width: $min-tablet) {
     flex: 1;
     width: 100%;
 
