--- a/src/app/modules/composer/components/text-area/text-area.component.html
+++ b/src/app/modules/composer/components/text-area/text-area.component.html
@@ -48,6 +48,7 @@
       [getChoiceLabel]="suggestions.getChoiceLabel"
       [itemTemplate]="itemTemplate"
       [adjustForScrollOffset]="true"
+      (input)="resizeMessageHeight()"
       #messageInput
     >
     </textarea>
