--- a/src/app/modules/composer/components/cover-photo-selector/cover-photo-selector.component.scss
+++ b/src/app/modules/composer/components/cover-photo-selector/cover-photo-selector.component.scss
@@ -14,7 +14,7 @@ m-composer__coverPhotoSelector {
 .m-composerCoverPhotoSelector__button {
   appearance: none;
   border-radius: 2px;
-  padding: 3px 10px;
+  padding: 3px 4px 3px 10px;
   line-height: 20px;
   cursor: pointer;
 
