--- a/src/app/modules/composer/components/preview/preview.component.scss
+++ b/src/app/modules/composer/components/preview/preview.component.scss
@@ -2,6 +2,9 @@
   position: relative;
   width: 100%;
   height: 330px;
+  @media screen and (max-width: $max-mobile) {
+    height: auto;
+  }
 
   @include m-theme() {
     background-color: themed($m-bgColor--primary);
@@ -14,9 +17,11 @@
   .m-composerPreview__image,
   .m-composerPreview__video {
     width: 100%;
-    height: 100%;
     object-fit: contain;
     pointer-events: none;
+    @media screen and (min-width: $max-mobile) {
+      height: 100%;
+    }
   }
 
   .m-composerPreview__close {
@@ -24,7 +29,7 @@
     top: 25px;
     right: 25px;
     z-index: 10;
-    padding: 1px;
+    padding: 1px 0 0 1px;
     border: 1px solid;
     border-radius: 2px;
     cursor: pointer;
@@ -44,6 +49,24 @@
     background: transparent;
     i {
       cursor: not-allowed;
+    }
+  }
+  @media screen and (max-width: $max-mobile) {
+    m-composerattachmentpreview {
+      height: auto;
+      & > img,
+      & > video {
+        height: auto;
+        max-height: 330px;
+      }
+
+      .m-videoPlayer__placeholder {
+        height: 100%;
+        max-height: 330px;
+        i {
+          opacity: 0.5;
+        }
+      }
     }
   }
 }
