--- a/src/app/modules/composer/components/progress/progress.component.scss
+++ b/src/app/modules/composer/components/progress/progress.component.scss
@@ -3,6 +3,7 @@
   width: 100%;
   height: 1px;
   background-color: transparent;
+  margin-bottom: 20px;
 
   &.m-composer__progress--active,
   &.m-composer__progress--indeterminate {
