--- a/src/app/modules/composer/components/popup/monetize/v2/components/plus/plus.component.html
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/plus/plus.component.html
@@ -84,7 +84,7 @@
     (click)="save()"
     [disabled]="!canSave"
     i18n="@@COMMON__SAVE"
-    data-cy="plus-save-button"
+    data-cy="monetize-save-button"
   >
     Save
   </m-shadowboxSubmitButton>
