--- a/src/app/modules/composer/components/popup/monetize/v2/components/custom/custom.component.html
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/custom/custom.component.html
@@ -16,7 +16,10 @@
       </div>
       <div class="m-form__field--checkbox">
         <div class="m-composerPopup__checkbox">
-          <m-formInput__checkbox formControlName="enabled">
+          <m-formInput__checkbox
+            formControlName="enabled"
+            data-cy="monetize-membership-enable-paywall-checkbox"
+          >
             <span i18n="@@COMPOSER__MONETIZE_CUSTOM__ENABLE_PAYWALL"
               >Enable Paywall</span
             >
@@ -41,6 +44,7 @@
             formControlName="usd"
             class="form-control"
             min="0.01"
+            data-cy="monetize-membership-paywall-amount-input"
           />
         </div>
         <!--ALLOW TOKENS CHECKBOX ---------------------------- -->
