--- a/src/app/modules/composer/components/popup/monetize/v2/components/monetize.component.html
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/monetize.component.html
@@ -6,6 +6,7 @@
         <a
           [ngClass]="{ 'm-tabs__tab--selected': type === 'plus' }"
           (click)="type = 'plus'"
+          data-cy="monetize-membership-plus-tab"
           >Minds+</a
         >
       </div>
@@ -13,6 +14,7 @@
         <a
           [ngClass]="{ 'm-tabs__tab--selected': type === 'membership' }"
           (click)="type = 'membership'"
+          data-cy="monetize-membership-membership-tab"
           >Memberships</a
         >
       </div>
@@ -20,6 +22,7 @@
         <a
           [ngClass]="{ 'm-tabs__tab--selected': type === 'custom' }"
           (click)="type = 'custom'"
+          data-cy="monetize-membership-custom-tab"
           >Custom</a
         >
       </div>
