--- a/src/app/modules/messenger/encryption/encryption.component.scss
+++ b/src/app/modules/messenger/encryption/encryption.component.scss
@@ -45,5 +45,15 @@
     a {
       cursor: pointer;
     }
+    input {
+      font-size: 12px;
+
+      @include m-theme() {
+        background-color: themed($m-bgColor--primary);
+        color: themed($m-textColor--primary);
+        border-top: 1px solid themed($m-borderColor--primary);
+        border-right: 1px solid themed($m-borderColor--primary);
+      }
+    }
   }
 }
