Pro footer terms

--- a/src/app/modules/pro/channel/footer/footer.component.html
+++ b/src/app/modules/pro/channel/footer/footer.component.html
@@ -16,6 +16,12 @@
     >
       {{ link.title }}
     </a>
+    <a class="m-proChannelFooter__link" routerLink="/p/privacy">
+      Privacy
+    </a>
+    <a class="m-proChannelFooter__link" routerLink="/p/terms">
+      Terms
+    </a>
 
     <ng-container *ngIf="currentUser">
       <ng-container *ngIf="isProDomain">
