--- a/src/app/modules/wallet/v2/cash/balance/balance-cash.component.html
+++ b/src/app/modules/wallet/v2/cash/balance/balance-cash.component.html
@@ -96,5 +96,38 @@
         </div>
       </ng-container>
     </div>
+
+    <!-- -------------------------------------------- -->
+    <!--- Total Paid ------------------------------>
+    <!-- -------------------------------------------- -->
+    <div class="m-walletBalance--cash__col">
+      <div
+        class="m-walletBalance--cash__colTitle"
+        i18n="@@WALLET_V2__BALANCE_CASH__TOTAL__PAID__OUT"
+      >
+        Total Transferred
+        <m-tooltip icon="help">
+          This is the total amount that has been paid out to your bank
+        </m-tooltip>
+      </div>
+      <div class="m-walletBalance--cash__colValWrapper" *ngIf="!hasAccount">
+        <span class="m-walletBalance--cash__colVal--int">$0</span>
+      </div>
+      <ng-container *ngIf="hasAccount">
+        <div class="m-walletBalance--cash__colValWrapper">
+          <span class="m-walletBalance--cash__colVal--int">{{
+            totalPaidOut.int
+              | number: '1.0-0'
+              | currency: currency
+              | slice: 0:-3
+          }}</span
+          ><span
+            class="m-walletBalance--cash__colVal--frac"
+            *ngIf="totalPaidOut.frac"
+            >.{{ totalPaidOut.frac }}</span
+          >
+        </div>
+      </ng-container>
+    </div>
   </div>
 </div>
