--- a/src/app/modules/discovery/feeds/feed-item.component.scss
+++ b/src/app/modules/discovery/feeds/feed-item.component.scss
@@ -16,6 +16,9 @@
       align-items: flex-start;
       text-decoration: none;
     }
+    h4 > u {
+      text-decoration: none;
+    }
     .m-discoveryFeedItem__avatar {
       width: 40px;
       height: 40px;
