--- a/src/app/modules/composer/components/base/base.component.scss
+++ b/src/app/modules/composer/components/base/base.component.scss
@@ -24,6 +24,10 @@ m-composer__base {
     width: 100%;
     height: 100%;
     min-height: 100%;
+
+    @media screen and (max-width: $max-mobile) {
+      justify-content: space-between;
+    }
   }
 
   m-composer__titleBar {
@@ -48,6 +52,17 @@ m-composer__base {
     @include m-theme() {
       color: themed($m-alert);
       border-color: themed($m-borderColor--primary);
+    }
+  }
+
+  .m-composerBase__scrollableArea {
+    flex-grow: 1;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+
+    &::-webkit-scrollbar {
+      display: none;
     }
   }
 }
