--- a/src/app/modules/onboarding-v2/steps/notice/notice.component.html
+++ b/src/app/modules/onboarding-v2/steps/notice/notice.component.html
@@ -36,7 +36,11 @@
 </p>
 
 <div class="m-onboarding__actionButtons">
-  <button class="mf-button mf-button--alt" (click)="continue()">
+  <button
+    class="mf-button mf-button--alt"
+    (click)="continue()"
+    data-cy="onboarding-lets-get-setup-button"
+  >
     <span i18n="@@ONBOARDING_NOTICE__LETS_GET_SETUP">Let's Get Setup</span>
   </button>
   <a (click)="skip()" i18n="@@ONBOARDING_NOTICE__NO_THANKS_LATER">
