(chore): remove old settings from main module

--- a/src/app/modules/settings-v2/other/referrals/links/links.component.html
+++ b/src/app/modules/settings-v2/other/referrals/links/links.component.html
@@ -150,10 +150,7 @@
   <div
     class="m-settingsV2__referralsLinks__modalShow m-settingsV2__referralsLinks__modalButton"
   >
-    <a
-      [routerLink]="['/settings/canary/other/referrals']"
-      (click)="closeModal()"
-    >
+    <a [routerLink]="['/settings/other/referrals']" (click)="closeModal()">
       <button class="m-btn m-btn--slim m-btn--action">
         <span i18n-title="@@M_REFERRALS__LINKS_CONSOLE_BUTTON"
           >Go to Referrals Console</span
