--- a/src/app/modules/settings-v2/settings-v2.component.html
+++ b/src/app/modules/settings-v2/settings-v2.component.html
@@ -4,7 +4,7 @@
     [ngClass]="{ onMainNav: onMainNav }"
     [disableActiveClass]="onMainNav"
     [menus]="mainMenus"
-    parentRoute="/settings/canary"
+    parentRoute="/settings"
     (itemSelected)="mainMenuItemSelected()"
   ></m-nestedMenu>
 
