Update to content policy for spam #3502

--- a/src/app/modules/report/marketing/marketing.component.html
+++ b/src/app/modules/report/marketing/marketing.component.html
@@ -152,6 +152,24 @@
       info@minds.com with the post in question and the reasons for why you
       believe it should be accepted.
     </p>
+
+    <h4>Spam Policy</h4>
+    <p>
+      Spam is not allowed on Minds. Spam may take many forms, and our rules are
+      intended to cover a range of prohibited behavior, including: Repeated,
+      unwanted, and/or unsolicited actions, automated or manual, that negatively
+      affect Minds users, groups, and/or Minds itself; Content that is designed
+      to further unlawful acts (such as phishing) or mislead recipients as to
+      the source of the material (such as spoofing); Commercially-motivated
+      spam, that typically aims to drive traffic from Minds over to another
+      website, service or initiative through backlinking or other inauthentic
+      methods; Inauthentic engagements, that try to make channels or content
+      appear more popular than they are; Coordinated activity, that attempts to
+      artificially influence opinion through the use of multiple accounts, fake
+      accounts, and/or scripting or automation In most cases, spam will result
+      in a strike for your channel. In cases where the behavior is deemed to be
+      malicious or harmful, the account will result in an immediate ban.
+    </p>
   </div>
 
   <div class="m-marketing__contents m-reportMarketing__stats">
