Show upgrade to plus modal on unlocking plus post

--- a/src/app/modules/wire/v2/creator/marketing-block/marketing-block.component.html
+++ b/src/app/modules/wire/v2/creator/marketing-block/marketing-block.component.html
@@ -1,7 +1,7 @@
 <div
   class="m-wireCreator__marketingBlock"
   *ngIf="upgradeType"
-  [ngStyle]="bannerBackgroundImageCss()"
+  [ngClass]="{ isPlus: isPlus, isPro: isPro }"
 >
   <div class="m-wireCreatorMarketingBlock__copy">
     <div
